# arm_avoid_obs

./: .gitignore  .gitmodules  README.md
src/obs_avoid/: CMakeLists.txt  README.md  package.xml
src/obs_avoid/config/: obs.txt  pos_data.yaml  traj.txt
src/obs_avoid/include/obs_avoid/: Obstacle.hpp  avoid_obs.hpp  moveit_utils.hpp  transform.hpp
src/obs_avoid/launch/: start_gazebo.launch.py  start_node.launch.py
src/obs_avoid/models/: gazebo_world.xacro.xml  gazebo_world.xml
src/obs_avoid/obs_avoid/: hello.py  model_utils.py  show_traj.py  test_model.py
src/obs_avoid/obs_avoid/MaskRCNN-12-int8/: test.py  usage.md
src/obs_avoid/src/: Obstacle.cpp  avoid_obs.cpp  moveit_utils.cpp  test_moveit.cpp
